got the styling for the inidivudal pages, need to make sure it can wrap properly without the home button if more than one stock is returned or chosen for future funcitonality. need to style the home page to match. maybe put a background photo

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,14 @@ body,
 		Helvetica Neue, sans-serif;
 }
 
+#__next {
+	display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    height: 100%;
+    flex-direction: column;
+}
+
 a {
 	color: inherit;
 	text-decoration: none;
